Not working methods adjusted to work
